[gd_scene load_steps=11 format=2]

[ext_resource path="res://classes/key_bindings_popup.gd" type="Script" id=1]
[ext_resource path="res://font/Andale Mono.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=5]
script/source = "extends Label

func _ready():
	pass

func _custom_pressed():
	var w = $rs_w.value
	var h = $rs_h.value
	$\"/root/LocalData\".rsx = w
	$\"/root/LocalData\".rsy = h
	print(w,h)
	OS.window_size = Vector2(w,h)
"

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[node name="options_menu" type="WindowDialog"]
visible = true
margin_left = 52.0
margin_top = 167.0
margin_right = 1236.0
margin_bottom = 607.0
window_title = "Options"
script = ExtResource( 1 )

[node name="dimmer" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -50.0
margin_top = -170.0
margin_right = 1230.0
margin_bottom = 550.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.431373 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 3.0
margin_right = 1184.0
margin_bottom = 440.0

[node name="Main" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="bg1" type="ColorRect" parent="TabContainer/Main"]
margin_left = -5.0
margin_top = -8.0
margin_right = 724.0
margin_bottom = 406.0
color = Color( 0, 0, 0.156863, 0.392157 )

[node name="bg2" type="ColorRect" parent="TabContainer/Main"]
margin_left = 725.0
margin_top = -8.0
margin_right = 1179.0
margin_bottom = 409.0
color = Color( 0, 0, 0.196078, 0.196078 )

[node name="Save" type="Button" parent="TabContainer/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 590.0
margin_top = 336.0
margin_right = -510.0
margin_bottom = -29.0
custom_fonts/font = SubResource( 1 )
text = "Save"

[node name="prlbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 71.0
margin_right = 118.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 2 )
text = "Primary"
align = 3

[node name="sclbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 107.0
margin_right = 160.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "Secondary"
align = 3

[node name="mdlbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 143.0
margin_right = 115.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 2 )
text = "Jump"
align = 3

[node name="fwdlbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 183.0
margin_right = 132.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 2 )
text = "Forward"
align = 3

[node name="bcklbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 220.0
margin_right = 146.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 2 )
text = "Backward"
align = 3

[node name="strfllbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 260.0
margin_right = 188.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "Strafe left"
align = 3

[node name="strfrlbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 300.0
margin_right = 202.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 2 )
text = "Strafe right"
align = 3

[node name="pnlbl" type="Label" parent="TabContainer/Main"]
margin_left = 20.0
margin_top = 336.0
margin_right = 160.0
margin_bottom = 364.0
custom_fonts/font = SubResource( 2 )
text = "Toggle gun"
align = 3

[node name="qsvlbl" type="Label" parent="TabContainer/Main"]
margin_left = 364.0
margin_top = 73.0
margin_right = 504.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Quick save"
align = 3

[node name="qldlbl" type="Label" parent="TabContainer/Main"]
margin_left = 366.0
margin_top = 111.0
margin_right = 506.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "Quick load"
align = 3

[node name="pr" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 73.0
margin_right = 337.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
text = "<LMB>"

[node name="sc" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 110.0
margin_right = 337.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 3 )
text = "<RMB>"

[node name="mod" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 147.0
margin_right = 337.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 3 )
text = "<SPACE>"

[node name="fr" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 185.0
margin_right = 337.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 3 )
text = "<W>"

[node name="bc" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 221.0
margin_right = 337.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 3 )
text = "<S>"

[node name="lf" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 261.0
margin_right = 337.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 3 )
text = "<A>"

[node name="rt" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 301.0
margin_right = 337.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 3 )
text = "<D>"

[node name="pn" type="Button" parent="TabContainer/Main"]
margin_left = 197.0
margin_top = 341.0
margin_right = 337.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 3 )
text = "<E>"

[node name="qsv" type="Button" parent="TabContainer/Main"]
margin_left = 534.0
margin_top = 77.0
margin_right = 674.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 3 )
text = "<0>"

[node name="qld" type="Button" parent="TabContainer/Main"]
margin_left = 534.0
margin_top = 115.0
margin_right = 674.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 3 )
text = "<9>"

[node name="Bindings" type="Label" parent="TabContainer/Main"]
margin_left = 258.0
margin_top = 6.0
margin_right = 450.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "Bindings"

[node name="Resolution" type="Label" parent="TabContainer/Main"]
margin_left = 838.0
margin_top = 7.0
margin_right = 1078.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 4 )
text = "Resolution"
script = SubResource( 5 )

[node name="768x432" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 86.0
margin_right = 40.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 6 )
text = "768x432"

[node name="1024x576" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 128.0
margin_right = 54.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 6 )
text = "1024x576"

[node name="1280x720" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 168.0
margin_right = 54.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 6 )
text = "1280x720"

[node name="1920x1080" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 208.0
margin_right = 68.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 6 )
text = "1920x1080"

[node name="2560x1440" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 248.0
margin_right = 68.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 6 )
text = "2560x1440"

[node name="2560x1441" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 288.0
margin_right = 68.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 6 )
text = "3840x2160"

[node name="custom" type="Button" parent="TabContainer/Main/Resolution"]
margin_left = -70.0
margin_top = 329.0
margin_right = 68.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 6 )
text = "Custom"

[node name="Label" type="Label" parent="TabContainer/Main/Resolution"]
margin_left = 186.0
margin_top = 322.0
margin_right = 209.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 7 )
text = "x"

[node name="rs_w" type="SpinBox" parent="TabContainer/Main/Resolution"]
margin_left = 90.0
margin_top = 331.0
margin_right = 164.0
margin_bottom = 357.0
rect_scale = Vector2( 1.2, 1.2 )
min_value = 320.0
max_value = 7680.0
value = 1280.0
align = 1

[node name="rs_h" type="SpinBox" parent="TabContainer/Main/Resolution"]
margin_left = 220.0
margin_top = 332.0
margin_right = 294.0
margin_bottom = 356.0
rect_scale = Vector2( 1.2, 1.2 )
min_value = 200.0
max_value = 4320.0
value = 720.0
align = 1

[node name="sfxvol" type="HSlider" parent="TabContainer/Main"]
margin_left = 524.0
margin_top = 157.0
margin_right = 654.0
margin_bottom = 173.0
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="sfxvol_label" type="Label" parent="TabContainer/Main/sfxvol"]
margin_left = -160.0
margin_top = -7.0
margin_right = -40.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 8 )
text = "SFX Volume"

[node name="sfxvol_value" type="Label" parent="TabContainer/Main/sfxvol"]
margin_left = 140.0
margin_top = -4.0
margin_right = 176.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 8 )
text = "100"

[node name="musicvol" type="HSlider" parent="TabContainer/Main"]
margin_left = 524.0
margin_top = 193.0
margin_right = 654.0
margin_bottom = 209.0
value = 100.0
tick_count = 5

[node name="musicvol_label" type="Label" parent="TabContainer/Main/musicvol"]
margin_left = -160.0
margin_top = -7.0
margin_right = -16.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 8 )
text = "Music Volume"

[node name="musicvol_value" type="Label" parent="TabContainer/Main/musicvol"]
margin_left = 140.0
margin_top = -7.0
margin_right = 176.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 8 )
text = "100"
[connection signal="popup_hide" from="." to="." method="popup_hide"]
[connection signal="pressed" from="TabContainer/Main/Save" to="." method="_save_pressed"]
[connection signal="pressed" from="TabContainer/Main/pr" to="." method="ctrl_pressed" binds= [ "pr" ]]
[connection signal="pressed" from="TabContainer/Main/sc" to="." method="ctrl_pressed" binds= [ "sc" ]]
[connection signal="pressed" from="TabContainer/Main/mod" to="." method="ctrl_pressed" binds= [ "mod" ]]
[connection signal="pressed" from="TabContainer/Main/fr" to="." method="ctrl_pressed" binds= [ "fr" ]]
[connection signal="pressed" from="TabContainer/Main/bc" to="." method="ctrl_pressed" binds= [ "bc" ]]
[connection signal="pressed" from="TabContainer/Main/lf" to="." method="ctrl_pressed" binds= [ "lf" ]]
[connection signal="pressed" from="TabContainer/Main/rt" to="." method="ctrl_pressed" binds= [ "rt" ]]
[connection signal="pressed" from="TabContainer/Main/pn" to="." method="ctrl_pressed" binds= [ "pn" ]]
[connection signal="pressed" from="TabContainer/Main/qsv" to="." method="ctrl_pressed" binds= [ "qsv" ]]
[connection signal="pressed" from="TabContainer/Main/qld" to="." method="ctrl_pressed" binds= [ "qld" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/768x432" to="." method="resolution_pressed" binds= [ "768x432" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/1024x576" to="." method="resolution_pressed" binds= [ "1024x576" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/1280x720" to="." method="resolution_pressed" binds= [ "1280x720" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/1920x1080" to="." method="resolution_pressed" binds= [ "1920x1080" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/2560x1440" to="." method="resolution_pressed" binds= [ "2560x1440" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/2560x1441" to="." method="resolution_pressed" binds= [ "3840x2160" ]]
[connection signal="pressed" from="TabContainer/Main/Resolution/custom" to="TabContainer/Main/Resolution" method="_custom_pressed"]
